syntax = "proto3";

option go_package = "./pb";

package pb;

import "userModel.proto";

message GetUserInfoReq {
  int64 id = 1;
}
message GetUserInfoResp {
  pb.UserModel userModer = 1;
}

//service
service userCenter {
  rpc GetUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
}
